# ApplicationCore-MicroDAQ

./: .jenkinsfile  CMakeLists.txt  README.md
include/: LinkDef.h  MicroDAQ.h  MicroDAQHDF5.h  MicroDAQROOT.h  data_types.h
src/: MicroDAQ.cc  MicroDAQHDF5.cc  MicroDAQROOT.cc
test/: CMakeLists.txt  Dummy.h  device_test_HDF5.xml  device_test_ROOT.xml  dummy.dmap  dummy.map  dummy.xlmap  testArrayMicroDAQ.C  testDeviceMicroDAQ.C  testDevice_HDF5.C  testDevice_ROOT.C  testDiagnostics.C  testScalarMicroDAQ.C  test_HDF5.C
